--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
-    "dexie": "^3.0.3"
+    "dexie": "^3.0.3",
+    "qrcode": "^1.4.4"
   }
 }
